--- a/mysite/BP/static/BP/style.css
+++ b/mysite/BP/static/BP/style.css
@@ -449,7 +449,7 @@ background-color: #00aeef;
 	background: #F4FFFF
 }
 .table tr:hover{
-	background: #00AEEF;
+	background: #0f4d92;
 	color: #fff
 }
 
