--- a/mysite/BP/templates/BP/index.html
+++ b/mysite/BP/templates/BP/index.html
@@ -21,80 +21,189 @@
         <script src="js/vendor/modernizr-2.6.2.min.js"></script>
 </head>
 
-<h1><center>BluePages </center></h1>
-<p><center> Venture Hub for Yalies </center><p>
+<center><h1>BluePages</h1></center>
+<p><center> Digital Venture Hub </center><p>
 
-<p><a href="{% url 'BP:submit' %}"> Post a new job </a></p>
+<center><p><a href="{% url 'BP:submit' %}"> Post a new job </a></p></center>
 
-<center>
-{% if postings_list %}
-           <div class="container">
-                <div class="row page-title text-center wow bounce"  data-wow-delay="1s">
-                    <h5>Recent Jobs</h5>
-                    <h2><span>54716</span> Search</h2>
-                </div>
-                <div class="row jobs">
-                    <div class="col-md-9">
-                        <div class="job-posts table-responsive">
-    {% for posting in postings_list %}
-                            <table class="table">
-                                <tr class="odd wow fadeInUp" data-wow-delay="1s">
-                                    <td class="tbl-logo"><img src="img/job-logo1.png" alt=""></td>
-                                    <td class="tbl-title"><h4>Web Designer <br><span class="job-type">full time</span></h4></td>
-                                    <td><p>{{posting.posting_text}}</p></td>
-                                    <td><p><i class="icon-location"></i>San Franciso, USA</p></td>
-                                    <td><p>&dollar; 14000</p></td>
-                                    <td class="tbl-apply"><a href="#">More...</a></td>
-                                </tr>
-                            </table>
-    {% endfor %}
-                            </div>
-                        <div class="more-jobs">
-                            <a href=""> <i class="fa fa-refresh"></i>View more jobs</a>
+       <div id="preloader">
+            <div id="status">&nbsp;</div>
+        </div>
+        <!-- Body content -->
+		
+<!--         <div class="header-connect">
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-5 col-sm-8 col-xs-8">
+                        <div class="header-half header-call">
+                            <p>
+                                <span><i class="icon-cloud"></i>+019 4854 8817</span>
+                                <span><i class="icon-mail"></i>ohidul.islam951@gmail.com</span>
+                            </p>
                         </div>
                     </div>
-                    <div class="col-md-3 hidden-sm">
-                        <div class="job-add wow fadeInRight" data-wow-delay="1.5s">
-                            <h2>Seeking a job?</h2>
-                            <a href="#">Create a Account</a>
+                    <div class="col-md-2 col-md-offset-5  col-sm-3 col-sm-offset-1  col-xs-3  col-xs-offset-1">
+                        <div class="header-half header-social">
+                            <ul class="list-inline">
+                                <li><a href="#"><i class="fa fa-facebook"></i></a></li>
+                                <li><a href="#"><i class="fa fa-twitter"></i></a></li>
+                                <li><a href="#"><i class="fa fa-vine"></i></a></li>
+                                <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
+                                <li><a href="#"><i class="fa fa-dribbble"></i></a></li>
+                                <li><a href="#"><i class="fa fa-instagram"></i></a></li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div> -->
+
+        <nav class="navbar navbar-default">
+          <div class="container">
+            <!-- Brand and toggle get grouped for better mobile display -->
+            <div class="navbar-header">
+              <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+                <span class="sr-only">Toggle navigation</span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+              </button>
+              <a class="navbar-brand" href="#"><img src="img/logo.png" alt=""></a>
+            </div>
+
+            <!-- Collect the nav links, forms, and other content for toggling -->
+            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+<!--               <div class="button navbar-right">
+                  <button class="navbar-btn nav-button wow bounceInRight login" data-wow-delay="0.8s">Login</button>
+                  <button class="navbar-btn nav-button wow fadeInRight" data-wow-delay="0.6s">Sign up</button>
+              </div> -->
+              <ul class="main-nav nav navbar-nav navbar-right">
+                <li class="wow fadeInDown" data-wow-delay="0s" style=""><a class="active" href="#">Search</a></li>
+                <li class="wow fadeInDown" data-wow-delay="0.1s"><a href="#">Directory</a></li>
+                <li class="wow fadeInDown" data-wow-delay="0.2s"><a href="{% url 'BP:submit' %}">Submit</a></li>
+<!--                 <li class="wow fadeInDown" data-wow-delay="0.3s"><a href="#">About us</a></li>
+                <li class="wow fadeInDown" data-wow-delay="0.4s"><a href="#">Blog</a></li>
+                <li class="wow fadeInDown" data-wow-delay="0.5s"><a href="#">Contact</a></li> -->
+              </ul>
+            </div><!-- /.navbar-collapse -->
+          </div><!-- /.container-fluid -->
+        </nav>
+                </div>
+            </div>
+<hr>
+
+            <div class="container">
+                <div class="row page-title text-center  wow bounce"  data-wow-delay=".7s">
+                    <h5>TESTIMONIALS</h5>
+                    <h2>WHAT PEOPLES ARE SAYING</h2>
+                </div>
+                <div class="row testimonial">
+                    <div class="col-md-12">
+                        <div id="testimonial-slider">
+                            <div class="item">
+                                <div class="client-text">                                
+                                    <p>Jobify offer an amazing service and I couldn’t be happier! They 
+                                    are dedicated to helping recruiters find great candidates, wonderful service!</p>
+                                    <h4><strong>Ohidul Islam, </strong><i>Web Designer</i></h4>
+                                </div>
+                                <div class="client-face wow fadeInRight" data-wow-delay=".9s"> 
+                                    <img src="img/client-face1.png" alt="">
+                                </div>
+                            </div>
+                            <div class="item">
+                                <div class="client-text">                                
+                                    <p>Jobify offer an amazing service and I couldn’t be happier! They 
+                                    are dedicated to helping recruiters find great candidates, wonderful service!</p>
+                                    <h4><strong>Ohidul Islam, </strong><i>Web Designer</i></h4>
+                                </div>
+                                <div class="client-face">
+                                    <img src="img/client-face2.png" alt="">
+                                </div>
+                            </div>
+                            <div class="item">
+                                <div class="client-text">                                
+                                    <p>Jobify offer an amazing service and I couldn’t be happier! They 
+                                    are dedicated to helping recruiters find great candidates, wonderful service!</p>
+                                    <h4><strong>Ohidul Islam, </strong><i>Web Designer</i></h4>
+                                </div>
+                                <div class="client-face">
+                                    <img src="img/client-face1.png" alt="">
+                                </div>
+                            </div>
+                            <div class="item">
+                                <div class="client-text">                                
+                                    <p>Jobify offer an amazing service and I couldn’t be happier! They 
+                                    are dedicated to helping recruiters find great candidates, wonderful service!</p>
+                                    <h4><strong>Ohidul Islam, </strong><i>Web Designer</i></h4>
+                                </div>
+                                <div class="client-face">
+                                    <img src="img/client-face2.png" alt="">
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
             </div>
 
+        </div>
+        <div class="footer-area">
+            <div class="container">
+                <div class="row footer">
+                    <div class="col-md-4">
+                        <div class="single-footer">
+                            <img src="img/footer-logo.png" alt="" class="wow pulse" data-wow-delay="1s">
+                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Obcaecati architecto quaerat facere blanditiis tempora sequi nulla accusamus, possimus cum necessitatibus suscipit quia autem mollitia, similique quisquam molestias. Vel unde, blanditiis.</p>
+                        </div>
+                    </div>
+                    <div class="col-md-4">
+                        <div class="single-footer">
+                            <h4>Twitter update</h4>
+                            <div class="twitter-updates">
+                                <div class="single-tweets">
+                                    <h5>ABOUT 9 HOURS</h5>
+                                    <p><strong>AGOMeet Aldous</strong> - a Brave New World for #rails with more cohesion, less coupling and greater dev speed <a href="http://t.co/rsekglotzs">http://t.co/rsekglotzs</a></p>
+                                </div>
+                                <div class="single-tweets">
+                                    <h5>ABOUT 9 HOURS</h5>
+                                    <p><strong>AGOMeet Aldous</strong> - a Brave New World for #rails with more cohesion, less coupling and greater dev speed <a href="http://t.co/rsekglotzs">http://t.co/rsekglotzs</a></p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-4">
+                        <div class="single-footer">
+                            <h4>Useful lnks</h4>
+                            <div class="footer-links">
+                                <ul class="list-unstyled">
+                                    <li><a href="">About Us</a></li>
+                                    <li><a href="" class="active">Services</a></li>
+                                    <li><a href="">Work</a></li>
+                                    <li><a href="">Our Blog</a></li>
+                                    <li><a href="">Customers Testimonials</a></li>
+                                    <li><a href="">Affliate</a></li>
+                                    <li><a href="">Contact Us</a></li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="row footer-copy">
+                    <p><span>(C) webstie, All rights reserved</span> | <span>Graphic Designed by <a href="https://dribbble.com/siblu">Eftakher Alam</a></span> | <span> Web Designed by <a href="http://ohidul.me">Ohidul Islam</a></span> </p>
+                </div>
+            </div>
+        </div>
+		
+		
+		        <link rel="stylesheet" href="{% static 'BP/css/normalize.css' %}">
+	
+		
+        <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
+        <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.10.2.min.js"><\/script>')</script>
+        <script src="{% static 'BP/js/bootstrap.min.js' %}"></script>
+         <script src="{% static 'BP/js/owl.carousel.min.js' %}"></script>
+         <script src="{% static 'BP/js/wow.js' %}"></script>
+         <script src="{% static 'BP/js/main.js' %}"></script>
 {% else %}
     <p>No postings are available.</p>
 {% endif %}
 </center>
-
-            <div class="container">
-                <div class="row page-title text-center wow bounce"  data-wow-delay="1s">
-                    <h5>Recent Jobs</h5>
-                    <h2><span>54716</span> Search</h2>
-                </div>
-                <div class="row jobs">
-                    <div class="col-md-9">
-                        <div class="job-posts table-responsive">
-                            <table class="table">
-                                <tr class="odd wow fadeInUp" data-wow-delay="1s">
-                                    <td class="tbl-logo"><img src="img/job-logo1.png" alt=""></td>
-                                    <td class="tbl-title"><h4>Web Designer <br><span class="job-type">full time</span></h4></td>
-                                    <td><p>posting.posting_text</p></td>
-                                    <td><p><i class="icon-location"></i>San Franciso, USA</p></td>
-                                    <td><p>&dollar; 14000</p></td>
-                                    <td class="tbl-apply"><a href="#">More...</a></td>
-                                </tr>
-                            </table>
-                        </div>
-                        <div class="more-jobs">
-                            <a href=""> <i class="fa fa-refresh"></i>View more jobs</a>
-                        </div>
-                    </div>
-                    <div class="col-md-3 hidden-sm">
-                        <div class="job-add wow fadeInRight" data-wow-delay="1.5s">
-                            <h2>Seeking a job?</h2>
-                            <a href="#">Create a Account</a>
-                        </div>
-                    </div>
-                </div>
-            </div>
