Basic login/authentication infrastructure implemented

--- a/mysite/BP/static/BP/style.css
+++ b/mysite/BP/static/BP/style.css
@@ -5,7 +5,7 @@ h1 {
 
 body{
 	font-family: 'Open Sans', sans-serif;
-	background: white url("images/banner.png") no-repeat bottom;
+	background: white url("images/Banner.png") no-repeat bottom;
 }
 
 .header-connect{
