first commit to allauth

--- a/mysite/BP/templates/BP/index.html
+++ b/mysite/BP/templates/BP/index.html
@@ -286,7 +286,7 @@
                                     <td class="tbl-logo"><img src="img/job-logo1.png" alt=""></td>
                                     <td class="tbl-title"><h4>{{posting.job}} <br><span class="job-type">full time</span></h4></td>
                                     <td><p>{{posting.company_name}}</p></td>
-                                    <td><p><i class="icon-location"></i>{{posting.posting_text}}</p></td>
+                                    <td><p><i class="icon-location"></i>{{posting.user}}</p></td>
                                     <td><p>&dollar; 14000</p></td>
                                     <td class="tbl-apply"><a href="{% url 'BP:detail' posting.id %}">More...</a></td>
                                 </tr>
