--- a/mysite/BP/templates/BP/about.html
+++ b/mysite/BP/templates/BP/about.html
@@ -1,3 +1,34 @@
-<h1> About BluePages </h1>
+<!-- Source: Codepen -->
 
-<p> BluePages is the digital hub for student ventures </p>
+
+{% load static %}
+
+<link href='http://fonts.googleapis.com/css?family=Open+Sans|Maven+Pro:500' rel='stylesheet' type='text/css'>
+<link rel="stylesheet" href="{% static 'BP/css/about.css' %}">
+<script src="js/about.js"></script>
+
+<header>
+  <h1>About BluePages</h1>
+  <h3>
+    BluePages is the digital hub for student ventures 
+  </h3>
+  <h3>
+  	Scroll down to learn more
+  </h3>
+</header>
+
+
+<section class="main">
+<a class="arrow-wrap" href="#content">
+<span class="arrow"></span>
+</a>
+  
+  <div class="content" id="content">
+    <h1> Welcome! </h1>
+    <p>
+      BluePages was created in 2017 to help stimulate the entrepreneurial college community. Piloted at Yale University,
+      the digital platform seeks to provide the tools and services needed by student entrepreneurs to achieve their dreams
+      and aspirations.
+    </p>
+  </div> 
+</section>
