--- a/mysite/BP/templates/registration/login.html
+++ b/mysite/BP/templates/registration/login.html
@@ -1,15 +1,53 @@
 <!-- derived from https://simpleisbetterthancomplex.com/tutorial/2016/06/27/how-to-use-djangos-built-in-login-system.html -->
+<!-- Source: Codepen -->
 
+<!--
 
-{% block title %}Login{% endblock %}
+Copyright (c) 2017 - Derek Yu - http://codepen.io/Tushkiz/pen/xqfsy
 
-{% block content %}
-  <h2>Login</h2>
-  <form method="post">
+Permission is hereby granted, free of charge, to any person 
+obtaining a copy of this software and associated documentation 
+files (the "Software"), to deal in the Software without restriction,
+ including without limitation the rights to use, copy, modify, 
+merge, publish, distribute, sublicense, and/or sell copies of 
+the Software, and to permit persons to whom the Software is 
+furnished to do so, subject to the following conditions:
+
+The above copyright notice and this permission notice shall 
+be included in all copies or substantial portions of the Software.
+
+THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, 
+EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES 
+OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND 
+NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT 
+HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, 
+WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, 
+OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER 
+DEALINGS IN THE SOFTWARE.
+
+-->
+{% load static %}
+
+<link rel="stylesheet" href="{% static 'BP/css/login.css' %}">
+<script src="js/login.js"></script>
+<div>
+<center><h1 class ="title"> BluePages</h1></center>
+</div>
+	<div class="login">
+		<div class="login-screen">
+			<div class="app-title">
+				<h1>Welcome</h1>
+			</div>	
+		{% block content %}
+  <form class="form" method="post">
     {% csrf_token %}
     {{ form.as_p }}
-    <button type="submit">Login</button>
-    <input type="submit" value="login" />
-<input type="hidden" name="next" value="{{ next }}" />
+    <button type="submit" id="login-button" class="btn btn-primary btn-large btn-block">Login</button>
+    <center><a href="{% url 'BP:about' %}">Register</a></center>
+<!--     <input type="submit" value="login" /> -->
+<input type="hidden" name="next" value="{{ next }}" /> 
   </form>
 {% endblock %}
+		</div>
+	</div>
+</body>
