base.html added

--- a/mysite/BP/templates/BP/account_update.html
+++ b/mysite/BP/templates/BP/account_update.html
@@ -1,5 +1,10 @@
 
+{% extends 'BP/base.html' %}
+
+
+{% block content %}
 <!-- Material form is just a materialize thing for django forms -->
+<center>
 <div class="col s12 m8 offset-m2">
       <div class="card">
         <div class="card-content">
@@ -16,3 +21,6 @@
         </div>
     </div>
 </div>
+</center>
+
+{% endblock %}
