--- a/mysite/BP/templates/BP/about.html
+++ b/mysite/BP/templates/BP/about.html
@@ -1,8 +1,9 @@
 <!-- Source: Codepen -->
-
+{% extends 'BP/base.html' %}
 
 {% load static %}
 
+{% block content %}
 <link href='http://fonts.googleapis.com/css?family=Open+Sans|Maven+Pro:500' rel='stylesheet' type='text/css'>
 <link rel="stylesheet" href="{% static 'BP/css/about.css' %}">
 <script src="js/about.js"></script>
@@ -32,3 +33,4 @@
     </p>
   </div> 
 </section>
+{% endblock %}
