--- a/mysite/BP/templates/BP/index.html
+++ b/mysite/BP/templates/BP/index.html
@@ -1,277 +1,15 @@
-<!-- Job Board Template Derived from https://readytheme.net/item/jonaki-job-board-template/ -->
+{% extends 'BP/base.html' %}
 
 {% load static %}
 
-<head>
-<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
-<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">
-<link rel="stylesheet" type="text/css" href="{% static 'BP/style.css' %}" />
-
-<!-- Bootstrap Template Links -->
-<link href='http://fonts.googleapis.com/css?family=Open+Sans:400,300,700,800' rel='stylesheet' type='text/css'>
-<link rel="shortcut icon" href="{% static 'BP/favicon.ico' %}" type="image/x-icon">
-        <link rel="icon" href="{% static 'BP/favicon.ico' %}" type="image/x-icon">
-        <link rel="stylesheet" href="{% static 'BP/css/normalize.css' %}">
-        <link rel="stylesheet" href="{% static 'BP/css/font-awesome.min.css' %}">
-        <link rel="stylesheet" href="{% static 'BP/css/fontello.css' %}">
-        <link rel="stylesheet" href="{% static 'BP/css/animate.css' %}">
-        <link rel="stylesheet" href="{% static 'BP/css/bootstrap.min.css' %}">
-        <link rel="stylesheet" href="{% static 'BP/css/owl.carousel.css' %}">
-        <link rel="stylesheet" href="{% static 'BP/css/owl.theme.css' %}">
-        <link rel="stylesheet" href="{% static 'BP/css/owl.transitions.css' %}">
-        <link rel="stylesheet" href="{% static 'BP/responsive.css' %}">
-        <script src="js/vendor/modernizr-2.6.2.min.js"></script>
-</head>
-
-<!-- <center><h1>BluePages</h1></center> -->
-<center><img src="{% static 'BP/images/Banner.png' %}"></center>
-<p><center> Digital Venture Hub </center><p>
-	<p><center> Welcome {{ user.first_name }}! <center></p>
-<!-- <center><p><a href="{% url 'BP:submit' %}"> Post a new job </a></p></center> -->
-
-       <div id="preloader">
-            <div id="status">&nbsp;</div>
-        </div>
-        <!-- Body content -->
-		
-<!--         <div class="header-connect">
-            <div class="container">
-                <div class="row">
-                    <div class="col-md-5 col-sm-8 col-xs-8">
-                        <div class="header-half header-call">
-                            <p>
-                                <span><i class="icon-cloud"></i>+019 4854 8817</span>
-                                <span><i class="icon-mail"></i>ohidul.islam951@gmail.com</span>
-                            </p>
-                        </div>
-                    </div>
-                    <div class="col-md-2 col-md-offset-5  col-sm-3 col-sm-offset-1  col-xs-3  col-xs-offset-1">
-                        <div class="header-half header-social">
-                            <ul class="list-inline">
-                                <li><a href="#"><i class="fa fa-facebook"></i></a></li>
-                                <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-                                <li><a href="#"><i class="fa fa-vine"></i></a></li>
-                                <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
-                                <li><a href="#"><i class="fa fa-dribbble"></i></a></li>
-                                <li><a href="#"><i class="fa fa-instagram"></i></a></li>
-                            </ul>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div> -->
-
-        <nav class="navbar navbar-default">
-          <div class="container">
-            <!-- Brand and toggle get grouped for better mobile display -->
-            <div class="navbar-header">
-              <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-                <span class="sr-only">Toggle navigation</span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-              </button>
-              <a class="navbar-brand" href="#"><img src="img/logo.png" alt=""></a>
-            </div>
-
-            <!-- Collect the nav links, forms, and other content for toggling -->
-            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-<!--               <div class="button navbar-right">
-                  <button class="navbar-btn nav-button wow bounceInRight login" data-wow-delay="0.8s">Login</button>
-                  <button class="navbar-btn nav-button wow fadeInRight" data-wow-delay="0.6s">Sign up</button>
-              </div> -->
-              <ul class="main-nav nav navbar-nav navbar-right">
-                <li class="wow fadeInDown" data-wow-delay="0s" style=""><a class="active" href="#">Search</a></li>
-                <li class="wow fadeInDown" data-wow-delay="0.1s"><a href="#">Directory</a></li>
-                <li class="wow fadeInDown" data-wow-delay="0.2s"><a href="{% url 'BP:submit' %}">Submit</a></li>
-                <li class="wow fadeInDown" data-wow-delay="0.3s"><a href="{% url 'BP:about' %}">About</a></li>
-                <li class="wow fadeInDown" data-wow-delay="0.4s"><a href="{% url 'BP:account_update' pk=user.id%}">Edit Profile</a></li>
-                <li class="wow fadeInDown" data-wow-delay="0.5s"><a href="logout">Logout</a></li>
-<!--                 <li class="wow fadeInDown" data-wow-delay="0.5s"><a href="#">Contact</a></li> -->
-              </ul>
-            </div><!-- /.navbar-collapse -->
-          </div><!-- /.container-fluid -->
-        </nav>
-<!-- 
-        <div class="slider-area">
-            <div class="slider">
-                <div id="bg-slider" class="owl-carousel owl-theme">
-                 
-                  <div class="item"><img src="img/slider-image-3.jpg" alt="Mirror Edge"></div>
-                  <div class="item"><img src="img/slider-image-2.jpg" alt="The Last of us"></div>
-                  <div class="item"><img src="img/slider-image-1.jpg" alt="GTA V"></div>
-                 
-                </div>
-            </div>
-            <div class="container slider-content">
-                <div class="row">
-                    <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1 col-sm-12">
-                        <h2>Job Searching Just Got So Easy</h2>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eligendi deserunt deleniti, ullam commodi sit ipsam laboriosam velit adipisci quibusdam aliquam teneturo!</p>
-                        <div class="search-form wow pulse" data-wow-delay="0.8s">
-                            <form action="" class=" form-inline">
-                                <div class="form-group">
-                                    <input type="text" class="form-control" placeholder="Job Key Word">
-                                </div>
-                                <div class="form-group">
-                                    <select name="" id="" class="form-control">
-                                        <option>Select Your City</option>
-                                        <option selected>New york, CA</option>
-                                        <option>New york, CA</option>
-                                        <option>New york, CA</option>
-                                        <option>New york, CA</option>
-                                    </select>
-                                </div>
-                                <div class="form-group">
-                                    <select name="" id="" class="form-control">
-                                        <option>Select Your Category</option>
-                                        <option selected>Graphic Design</option>
-                                        <option>Web Design</option>
-                                        <option>App Design</option>
-                                    </select>
-                                </div>
-                                <input type="submit" class="btn" value="Search">
-
-
-                            </form>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div> -->
-
-<!--         <div class="content-area">
-            <div class="container">
-                <div class="row page-title text-center wow zoomInDown" data-wow-delay="1s">
-                    <h5>Our Process</h5>
-                    <h2>How we work for you?</h2>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vitae illum dolorem, rem officia, id explicabo sapiente</p>
-                </div>
-                <div class="row how-it-work text-center">
-                    <div class="col-md-4">
-                        <div class="single-work wow fadeInUp" data-wow-delay="0.8s">
-                            <img src="img/how-work1.png" alt="">
-                            <h3>Searching for the best job</h3>
-                            <p>Using the outcomes from the job, we will put together a plan for the most effective marketing strategy to get the best results.</p>
-                        </div>
-                    </div>
-                    <div class="col-md-4">
-                        <div class="single-work  wow fadeInUp"  data-wow-delay="0.9s">
-                            <img src="img/how-work2.png" alt="">
-                            <h3>Searching for the best job</h3>
-                            <p>Using the outcomes from the job, we will put together a plan for the most effective marketing strategy to get the best results.</p>
-                        </div>
-                    </div>
-                    <div class="col-md-4">
-                        <div class="single-work wow fadeInUp"  data-wow-delay="1s">
-                            <img src="img/how-work3.png" alt="">
-                            <h3>Searching for the best job</h3>
-                            <p>Using the outcomes from the job, we will put together a plan for the most effective marketing strategy to get the best results.</p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <hr>
-
-            <div class="container">
-                <div class="row job-posting wow fadeInUp" data-wow-delay="1s">
-                    <div role="tabpanel">
-                      <!-- Nav tabs -->
-<!--                       <ul class="nav nav-tabs" role="tablist">
-                        <li role="presentation" class="active"><a href="#job-seekers" aria-controls="home" role="tab" data-toggle="tab">Job Seekers</a></li>
-                        <li role="presentation"><a href="#employeers" aria-controls="profile" role="tab" data-toggle="tab">Employeers</a></li>
-                      </ul> -->
-
-                      <!-- Tab panes -->
-<!--                       <div class="tab-content">
-                        <div role="tabpanel" class="tab-pane fade in active" id="job-seekers">
-                            <ul class="list-inline job-seeker">
-                                <li>
-                                    <a href="">
-                                        <img src="img/team-small-5.jpg" alt="">
-                                        <div class="overlay"><h3>Ohidul Islam</h3><p>Web Designer</p></div>
-                                    </a>
-                                </li>
-                                <li>
-                                    <a href="">
-                                        <img src="img/team-small-6.jpg" alt="">
-                                        <div class="overlay"><h3>Mohidul Islam</h3><p>CEO</p></div>
-                                    </a>
-                                </li>
-                                <li>
-                                    <a href="">
-                                        <img src="img/team-small-3.jpg" alt="">
-                                        <div class="overlay"><h3>Unknown girl</h3><p>Graphic Designer</p></div>
-                                    </a>
-                                </li>
-                                <li>
-                                    <a href="">
-                                        <img src="img/team-small-4.jpg" alt="">
-                                        <div class="overlay"><h3>Eftakher Alam</h3><p>Graphic Designer</p></div>
-                                    </a>
-                                </li>
-                                <li>
-                                    <a href="">
-                                        <img src="img/team-small-2.jpg" alt="">
-                                        <div class="overlay"><h3>Mark Otto</h3><p>Founder</p></div>
-                                    </a>
-                                </li>
-                                <li>
-                                    <a href="">
-                                        <img src="img/team-small-1.jpg" alt="">
-                                        <div class="overlay"><h3>Rasel Ahmed</h3><p>Web Developer</p></div>
-                                    </a>
-                                </li>
-                            </ul>
-                        </div>
-                        <div role="tabpanel" class="tab-pane fade" id="employeers">
-                            <ul class="list-inline">
-                                <li>
-                                    <a href="">
-                                        <img src="img/employee4.png" alt="">
-                                        <div class="overlay"><h3>Instagram</h3></div>
-                                    </a>
-                                </li>
-                                <li>
-                                    <a href="">
-                                        <img src="img/employee5.png" alt="">
-                                        <div class="overlay"><h3>Microsoft</h3></div>
-                                    </a>
-                                </li>
-                                <li>
-                                    <a href="">
-                                        <img src="img/employee6.png" alt="">
-                                        <div class="overlay"><h3>Dribbble</h3></div>
-                                    </a>
-                                </li>
-                                <li>
-                                    <a href="">
-                                        <img src="img/employee1.png" alt="">
-                                        <div class="overlay"><h3>Beats Music</h3></div>
-                                    </a>
-                                </li>
-                                <li>
-                                    <a href="">
-                                        <img src="img/employee2.png" alt="">
-                                        <div class="overlay"><h3>Facebook</h3></div>
-                                    </a>
-                                </li>
-                                <li>
-                                    <a href="">
-                                        <img src="img/employee3.png" alt="">
-                                        <div class="overlay"><h3>Twitter</h3></div>
-                                    </a>
-                                </li>
-                            </ul>
-                        </div>
-                      </div>
-
-                    </div>
-                </div>
-            </div>
-            <hr>  -->
+{% block content %}
 
 <center>
+
+<center><img src="{% static 'BP/images/Banner.png' %}"></center>
+<p><center> Digital Venture Hub </center><p>
+    <p><center> Welcome {{ user.first_name }}! <center></p>
+
 {% if postings_list %}
            <div class="container">
                 <div class="row page-title text-center wow bounce"  data-wow-delay="1s">
@@ -282,6 +20,7 @@
                     <div class="col-md-9">
                         <div class="job-posts table-responsive">
     {% for posting in postings_list %}
+
                             <table class="table">
                                 <tr class="odd wow fadeInUp" data-wow-delay="1s">
                                     <td class="tbl-logo"><img src="img/job-logo1.png" alt=""></td>
@@ -298,12 +37,6 @@
                             <a href=""> <i class="fa fa-refresh"></i>View more jobs</a>
                         </div>
                     </div>
-<!--                     <div class="col-md-3 hidden-sm">
-                        <div class="job-add wow fadeInRight" data-wow-delay="1.5s">
-                            <h2>Seeking a job?</h2>
-                            <a href="#">Create a Account</a>
-                        </div>
-                    </div> -->
                 </div>
             </div>
 <hr>
@@ -408,18 +141,8 @@
                 </div>
             </div>
         </div>
-		
-		
-		        <link rel="stylesheet" href="{% static 'BP/css/normalize.css' %}">
-		
-		
-        <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
-        <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.10.2.min.js"><\/script>')</script>
-        <script src="{% static 'BP/js/bootstrap.min.js' %}"></script>
-         <script src="{% static 'BP/js/owl.carousel.min.js' %}"></script>
-         <script src="{% static 'BP/js/wow.js' %}"></script>
-         <script src="{% static 'BP/js/main.js' %}"></script>
 {% else %}
     <p>No postings are available.</p>
 {% endif %}
 </center>
+{% endblock %}
