--- a/mysite/BP/templates/BP/base.html
+++ b/mysite/BP/templates/BP/base.html
@@ -22,8 +22,7 @@
         <link rel="stylesheet" href="{% static 'BP/responsive.css' %}">
         <link rel="stylesheet" href="{% static 'BP/css/normalize.css' %}">
         <script src="js/vendor/modernizr-2.6.2.min.js"></script>
-                <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
-        <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.10.2.min.js"><\/script>')</script>
+
         <script src="{% static 'BP/js/bootstrap.min.js' %}"></script>
          <script src="{% static 'BP/js/owl.carousel.min.js' %}"></script>
          <script src="{% static 'BP/js/wow.js' %}"></script>
@@ -288,10 +287,10 @@
                     <ul class="dropdown-menu dropdown-user">
                         <li><a href="#"><i class="fa fa-user fa-fw"></i> User Profile</a>
                         </li>
-                        <li><a href="#"><i class="fa fa-gear fa-fw"></i> Settings</a>
+                        <li><a href="{% url 'BP:account_update' pk=user.id%}"><i class="fa fa-gear fa-fw"></i> Settings</a>
                         </li>
                         <li class="divider"></li>
-                        <li><a href="login.html"><i class="fa fa-sign-out fa-fw"></i> Logout</a>
+                        <li><a href="{% url 'BP:logout' %}"><i class="fa fa-sign-out fa-fw"></i> Logout</a>
                         </li>
                     </ul>
                     <!-- /.dropdown-user -->
@@ -330,7 +329,7 @@
                             <!-- /.nav-second-level -->
                         </li>
                         <li>
-                            <a href="{% static 'BP/bootstrap/pages/tables.html' %}"><i class="fa fa-table fa-fw"></i> Tables</a>
+                            <a href="{% static 'BP/bootstrap/pages/tables.html' %}"><i class="fa fa-table fa-fw"></i> Directory </a>
                         </li>
                         <li>
                             <a href="forms.html"><i class="fa fa-edit fa-fw"></i> Forms</a>
@@ -420,6 +419,7 @@
 
     <!-- jQuery -->
     <script src="{% static 'BP/bootstrap/vendor/jquery/jquery.min.js' %}"></script>
+
 
     <!-- Bootstrap Core JavaScript -->
     <script src="{% static 'BP/bootstrap/vendor/bootstrap/js/bootstrap.min.js' %}"></script>
