--- a/mysite/BP/templates/BP/base.html
+++ b/mysite/BP/templates/BP/base.html
@@ -285,9 +285,9 @@
                         <i class="fa fa-user fa-fw"></i> <i class="fa fa-caret-down"></i>
                     </a>
                     <ul class="dropdown-menu dropdown-user">
-                        <li><a href="#"><i class="fa fa-user fa-fw"></i> User Profile</a>
+                        <li><a href="{% url 'BP:edit_company' pk=user.id%}"><i class="fa fa-user fa-fw"></i> Company Profile</a>
                         </li>
-                        <li><a href="{% url 'BP:account_update' pk=user.id%}"><i class="fa fa-gear fa-fw"></i> Settings</a>
+                        <li><a href="{% url 'BP:account_update' pk=user.id%}"><i class="fa fa-gear fa-fw"></i> User Settings</a>
                         </li>
                         <li class="divider"></li>
                         <li><a href="{% url 'BP:logout' %}"><i class="fa fa-sign-out fa-fw"></i> Logout</a>
