--- a/mysite/BP/templates/BP/company_info_update.html
+++ b/mysite/BP/templates/BP/company_info_update.html
@@ -14,7 +14,7 @@
             <div class="divider"></div>
             {{ formset.management_form }}
                 {{ formset.as_p }}
-            <button type="submit" class="btn-floating btn-large waves-light waves-effect"><i class="large material-icons">done</i></button>
+            <button type="submit" class="btn-floating btn-large waves-light waves-effect"><i class="large material-icons">Update</i></button>
             <a href="#" onclick="window.history.back(); return false;" title="Cancel" class="btn-floating waves-effect waves-light red"><i class="material-icons">history</i></a>
  
         </form>
