before changing posting model

--- a/mysite/BP/templates/BP/base.html
+++ b/mysite/BP/templates/BP/base.html
@@ -368,16 +368,7 @@
                             <a href="{% url 'BP:about' %}"><i class="fa fa-edit fa-fw"></i> About </a>
                         </li>
                         <li>
-                            <a href="#"><i class="fa fa-files-o fa-fw"></i> Sample Pages<span class="fa arrow"></span></a>
-                            <ul class="nav nav-second-level">
-                                <li>
-                                    <a href="{% url 'BP:submit' %}">Submit Page</a>
-                                </li>
-                                <li>
-                                    <a href="login.html">Login Page</a>
-                                </li>
-                            </ul>
-                            <!-- /.nav-second-level -->
+                            <a href="{% url 'BP:submit' %}">Submit Job</a>
                         </li>
                     </ul>
                 </div>
