delete post functionality added, posting model field pay added

--- a/mysite/BP/templates/BP/company_info_update.html
+++ b/mysite/BP/templates/BP/company_info_update.html
@@ -9,6 +9,7 @@
       <div class="card">
         <div class="card-content">
         <h2 class="flow-text">Update company information</h2>
+        If you are a startup founder, please update your company information. When finished, check "display in company directory" to go public
           <form action="." method="POST" class="padding">
             {% csrf_token %} {{ noodle_form.as_p }}
             <div class="divider"></div>
