--- a/mysite/BP/templates/BP/detail.html
+++ b/mysite/BP/templates/BP/detail.html
@@ -3,9 +3,9 @@
 <p> Job: {{posting.job}} </p>
 <p> Job Description: {{posting.job_description}} </p>
 
-<h3> Founder Contact Information </h3>
+<!-- <h3> Founder Contact Information </h3>
 <ul>
 {% for founder in posting.founder_set.all %}
     <li>{{ founder.email}}</li>
 {% endfor %}
-</ul>
+</ul> -->
