--- a/mysite/BP/templates/BP/index.html
+++ b/mysite/BP/templates/BP/index.html
@@ -23,12 +23,15 @@
 
                             <table class="table">
                                 <tr class="odd wow fadeInUp" data-wow-delay="1s">
-                                    <td class="tbl-logo"><img src="img/job-logo1.png" alt=""></td>
+<!--                                     <td class="tbl-logo"><img src="img/job-logo1.png" alt=""></td> -->
                                     <td class="tbl-title"><h4>{{posting.job}} <br><span class="job-type">full time</span></h4></td>
                                     <td><p>{{posting.company_name}}</p></td>
                                     <td><p><i class="icon-location"></i>{{posting.user}}</p></td>
-                                    <td><p>&dollar; 14000</p></td>
+                                    <td><p>{{posting.pay}}</p></td>
                                     <td class="tbl-apply"><a href="{% url 'BP:detail' posting.id %}">More...</a></td>
+                                    {% if request.user == posting.user %}
+                                    <a href="{% url 'BP:delete_posting' posting.id %}">Delete Posting</a>
+                                    {% endif %}
                                 </tr>
                             </table>
     {% endfor %}
