site statistics added to overview page

--- a/mysite/BP/templates/BP/base.html
+++ b/mysite/BP/templates/BP/base.html
@@ -314,6 +314,9 @@
                             <!-- /input-group -->
                         </li>
                         <li>
+                            <a href="{% url 'BP:about' %}"><i class="fa fa-edit fa-fw"></i> Overview </a>
+                        </li>
+                        <li>
                             <a href="{% url 'BP:index' %}"><i class="fa fa-dashboard fa-fw"></i> Job Search</a>
                         </li>
                         <li>
@@ -365,10 +368,7 @@
                             <!-- /.nav-second-level -->
                         </li>
                         <li>
-                            <a href="{% url 'BP:about' %}"><i class="fa fa-edit fa-fw"></i> About </a>
-                        </li>
-                        <li>
-                            <a href="{% url 'BP:submit' %}">Submit Job</a>
+                            <a href="{% url 'BP:submit' %}"><i class="fa fa-edit fa-fw"></i> Submit Job</a>
                         </li>
                     </ul>
                 </div>
